<resources>
    <string name="app_name" translatable="false">&app_name;</string>
    <string name="Ok">Ok\n</string>
    <string name="please_enter_correct_otp">Please enter correct otp</string>
    <string name="please_enter_correct_Mobile">Please enter correct Mobile Number</string>
    <string name="login_successful">Login Successful</string>
    <string name="text_select">Select</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_done">Done</string>
    <string name="press_back_again">Press Back Again</string>
    <string name="text_add_video">Video</string>
    <string name="error_valid_medai_format">Please upload valid Image or Video file format.</string>
    <string name="error_valid_pdf_format">Please upload valid PDF file format.</string>
    <string name="message_camera_unabletocapture">Unable to capture from camera</string>
    <string name="message_camera_unabletoopen">Unable to open camera</string>
    <string name="message_camera_prepareimage">Unable to prepare image</string>
    <string name="message_camera_preparevideo">Unable to prepare video</string>
    <string name="error_valid_image_size">Image size must be up to 5 MB.</string>
    <string name="error_valid_video_size">Video size must be up to 10 MB.</string>
    <string name="message_video_duration">Video duration should between 1 to 20 second/s</string>
    <string name="request_read_storage_permission">&app_name;
        needs Camera and storage permission.</string>
    <string name="text_video_gallery">Video Gallery</string>
    <string-array name="select_media_text">
        <item>@string/text_add_photo</item>
        <item>@string/text_photo_gallery</item>

    </string-array>
    <string-array name="select_video_media_text">
        <item>@string/text_add_video</item>
        <item>@string/text_video_gallery</item>
    </string-array>
    <string-array name="select_media_doc_text">
        <item>@string/text_add_photo</item>
        <item>@string/text_add_document</item>
    </string-array>
    <string-array name="select_photo_media_text">
        <item>@string/text_add_photo</item>
        <item>@string/text_photo_gallery</item>
    </string-array>
    <string name="text_add_document">Document</string>
    <string name="text_add_photo">Photo</string>
    <string name="text_photo_gallery">Photo Gallery</string>
    <string name="please_enter_otp">Please enter otp\n</string>
    <string name="forget_password"> <font color='blue'><u>Forget Password</u>?</font></string>
    <string name="already_login">Already Registered? <font color='blue'><u>Login</u></font></string>
    <string name="i_accept_the_terms_and_conditions_as_mentioned_on_this_portal">I accept the <font color='blue'><u>Terms and Conditions</u></font> as mentioned on this portal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Dashboard</string>
    <string name="my_child_is_missing">My Child is Missing</string>
    <string name="i_have_sighted_a_child">I Have Sighted A Child</string>
    <string name="i_am_searching_for_a_child">I am searching for a child</string>
    <string name="profile_management">Profile management</string>
    <string name="change_pasword">Change pasword</string>
    <string name="logout">Logout</string>
    <string name="choose_file">Choose File</string>
    <string name="how_you_are_being_harrassed">How you are being\nharassed?</string>
    <string name="pocso_act_2012"><u>POCSO Act 2012</u></string>
    <string name="usage_terms_and_conditions">PLEASE READ THESE PORTAL USAGE TERMS AND CONDITIONS CAREFULLY BEFORE USING THIS PORTAL.\n
\n
1. Uploading of Missing Child Information (Parent/Legal Guardian)\n

The information entered is provided in good faith and is correct to the best of my knowledge and belief.\n
I understand that the information provided by me shall be scrutinized by a moderator of the portal before it is published/uploaded in the website.\n
Contact information entered can be made available to law enforcement agencies if required.\n
It is my responsibility to share the information of the recovery of the child as soon as possible with the (Administrators of the portal for due closure).\n
I understand that uploading any obscene or indecent picture/video will attract serious criminal liability.\n\n
2. Uploading of Missing Child Information (Other than Parent/Legal Guardian)\n

The information entered is provided in good faith and is correct to the best of my knowledge and belief.\n
I have ensured that the details of parents/legal guardian entered by me are correct.\n
Contact information entered can be made available to law enforcement agencies if required.\n
I understand that uploading any obscene or indecent picture/video will attract serious criminal liability.</string>
    <string name="i_accept_the_terms"> <font color='red'>*</font>I accept the Terms and Conditions as mentioned on this portal</string>
    <string name="gender">Gender<font color='red'>*</font></string>
    <string name="usage_terms_and_conditions_sighted">PLEASE READ THESE PORTAL USAGE TERMS AND CONDITIONS CAREFULLY BEFORE USING THIS PORTAL.\n
\n
Uploading information about sighted/found child\n
The information entered by me has been provided in good faith.\nI have satisfied myself that the child may be abandoned run away trafficked kidnapped or missing and is in need of assistance care and protection.\n
Contact information entered can be made available to law enforcement agencies if required.\nI have taken precaution not to disclose the facts/details of the offence if any committed by such child.\nI have also taken precaution not to disclose any information regarding victim or suspected victim of child sexual abuse.\nI understand that uploading any obscene or indecent picture/video will attract serious criminal liability.</string>
    <string-array name="year_array">
        <item>Year</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
    </string-array>
    <string-array name="month_array">
        <item>Month</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string-array name="feet_array">
        <item>Feet</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="inches_array">
        <item>Inches</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string-array name="inches_relation">
        <item>Please Select</item>
        <item>Parent</item>
        <item>Legal Guardian</item>
        <item>Other</item>

    </string-array>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="search_a_missing_child">Search a Missing Child</string>
    <string name="message_permission_not_granted">Permission not granted</string>
    <string name="camera_permission">You need to enable camera access and storage permission to access this</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="group">Group</string>
    <string name="role">Role*</string>
    <string name="state">State</string>
    <string name="district">District<font color="#FF0000">*</font></string>
    <string name="districts">Districts<font color="#FF0000">*</font></string>
    <string name="designation">Designation</string>
    <string name="organisation">Organisation</string>
    <string name="status">Status</string>
    <string name="name">Name*</string>
    <string name="na">NA</string>
    <string name="list_of_users">List Of Users</string>
    <string name="add_new_user">Add New User</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="mobile_other">Mobile Other</string>
    <string name="password">Password*</string>
    <string name="allowed_file_jpeg_jpg_and_png_under_5mb">Allowed File : jpeg, jpg and png Under 5MB</string>
    <string name="users">Users</string>
    <string name="all_users">All users</string>
    <string name="livestock_health_disease">Livestock Health Disease</string>
    <string name="vaccination_programme"><ul><li>Vaccination Programme</li></ul></string>
    <string name="implementing_agency">Implementing Agency</string>
    <string name="locations">Locations</string>
    <string name="ascad"><ul><li>ASCAD</li></ul></string>
    <string name="mobile_veterinary_units"><ul><li>Mobile veterinary Units</li></ul></string>
    <string name="national_livestock_mission">National Livestock Mission</string>
    <string name="implementing_agency_format1"><ul><li>Implementing Agency (Format1)</li></ul></string>
    <string name="rsplaboratory_semen_format2"><ul><li>Regional Semen Production Laboratory(Format2)</li></ul></string>
    <string name="state_semen_bank_format3"><ul><li>State Semen Bank (Format3)</li></ul></string>
    <string name="artificial_insemination_format4"><ul><li>Artificial Insemination (Format4)</li></ul></string>
    <string name="import_of_exotic_goat_format5"><ul><li>Import of Exotic Goat (Format5)</li></ul></string>
    <string name="assistance_for_qfps_format6"><ul><li>Assistance For Quality Fodder Seed Production (Format6)</li></ul></string>
    <string name="fps_plan_storage_format7"><ul><li>Fodder Seed Processing Plant Storage (Format7)</li></ul></string>
    <string name="fps_from_non_forest_format8"><ul><li>Fodder Production From Non Forest (Format8)</li></ul></string>
    <string name="fps_from_forest_land_format9"><ul><li>Fodder Production From Forest Land (Format9)</li></ul></string>
    <string name="assistance_for_ea_format10"><ul><li>Assistance For Extension Activities (Format10)</li></ul></string>
    <string name="nlm_edp_format11"><ul><li>NLM Entrepreneur Development Programme (Format11)</li></ul></string>
    <string name="national_dairy_development">National Dairy Development</string>
    <string name="milk_union_visit_report"><ul><li>Milk Union Visit Report</li></ul></string>
    <string name="dairy_plant_visit_report"><ul><li>Dairy Plant Visit Report</li></ul></string>
    <string name="dcs_bms_center_visit_report"><ul><li>DCS/BMS Center Visit report</li></ul></string>
    <string name="state_center_lab_visit_report"><ul><li>State Center Lab Visit Report</li></ul></string>
    <string name="milk_processing"><ul><li>Milk Processing</li></ul></string>
    <string name="milk_product_marketing"><ul><li>Milk Product Marketing</li></ul></string>
    <string name="productivity_enhancement_services"><ul><li>Productivity Enhancement Services</li></ul></string>
    <string name="mobile_veterinary_unit">Mobile Veterinary Unit</string>
    <string name="district_level">District Level</string>
    <string name="block_level">Block Level</string>
    <string name="farmer_level">Farmer Level</string>
    <string name="confirm">Confirm</string>
</resources>