<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/dp_20"
        android:background="@drawable/dialog_box"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvShowText"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/na"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/curve_stroke_thin_grey"
                android:fontFamily="@font/poppins_regular"
                android:paddingHorizontal="@dimen/dp_15"
                android:paddingVertical="@dimen/dp_5"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:background="@drawable/curve_fill_black"
                android:fontFamily="@font/poppins_regular"
                android:paddingHorizontal="@dimen/dp_15"
                android:paddingVertical="@dimen/dp_5"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>