<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="ClickAction"
            type="com.nlm.ui.activity.livestock_health_disease.mobile_veterinary_units.MobileVeterinaryActivity.ClickActions" />
    </data>

    <RelativeLayout
        android:id="@+id/rlParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rlToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/job_details_bg1"
            android:paddingTop="40dp"
            android:paddingBottom="@dimen/dp_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBackPress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:onClick="@{ClickAction::backPress}"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="@+id/tvHeading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvHeading" />

            <TextView
                android:id="@+id/tvHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lexend_semibold"
                android:text="@string/mobile_veterinary_unit"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rlToolbar"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/llParent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/ll1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/employee_home_bg"
                android:backgroundTint="@color/white"
                android:elevation="@dimen/dp_5"
                android:orientation="vertical"
                android:padding="@dimen/dp_10">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/curve_back_grey"
                    android:backgroundTint="#23ACFF"
                    android:gravity="center_vertical"
                    android:onClick="@{ClickAction::state}"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_halfblue"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvStateLevel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="State Level"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_20"
                            app:fontFamily="@font/opensans_bold" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/curve_back_grey"
                    android:backgroundTint="#DFE67C00"
                    android:gravity="center_vertical"
                    android:onClick="@{ClickAction::district}"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_halfblue"
                        android:backgroundTint="#E67C00"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvDistrictLevel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/district_level"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_20"
                            app:fontFamily="@font/opensans_bold" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/curve_back_grey"
                    android:backgroundTint="#B132FF"
                    android:gravity="center_vertical"
                    android:onClick="@{ClickAction::block}"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_halfblue"
                        android:backgroundTint="#D3841DC3"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvBlockLevel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/block_level"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_20"
                            app:fontFamily="@font/opensans_bold" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/curve_back_grey"
                    android:backgroundTint="#46A000"
                    android:gravity="center_vertical"
                    android:onClick="@{ClickAction::farmer}"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_halfblue"
                        android:backgroundTint="#5BAD1B"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvFarmerLevel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/farmer_level"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/sp_20"
                            app:fontFamily="@font/opensans_bold" />
                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</layout>